# qcs

./: ..gitmodules.swp  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  Meeting-notes.md  README.md
doc/: Project documentation.pdf:Zone.Identifier
libs/tinyfiledialogs/: tinyfiledialogs.cpp
src/: QuantumCircuit.cpp  QuantumCircuit.h  QuantumCircuit.hpp  file_io.cpp  file_io.hpp  main.cpp
src/controller/: QuantumCircuit.hpp  Simulator.hpp
src/gates/: CNOT.hpp  Gate.hpp  Hadamard.hpp  PauliGates.hpp  PauliX.hpp  RotationGate.hpp  gate.hpp
src/io/: File-io.hpp
src/operations/: BellState.hpp  Operation.hpp
src/view/: Button.hpp  PlaceholderGate.hpp  Result.hpp  VisualCNOT.hpp  VisualGate.hpp  VisualGateAbstract.hpp  VisualQubit.hpp
tests/: CNOT_test.cc  File_IO_test.cc  Gate_test.cc  PauliGates_test.cc  Simulator_test.cc
